# cogent-scissors

./: .gitignore  AGENTS.md  CLAUDE.md  COGAMES_ISSUE.md  COGENT.md  IMPROVE.md  README.md  SCISSORS_UPLOADS.md  STATUS.md  check_test.sh  check_test_011.sh  pyproject.toml  run_test_012_delta.sh
.claude/skills/: coach  coach.improve
.coach/: state.json  todos.md
.cogent/: INTENTION.md
cogames/: player.py
cogames/cvc/: critic.py  cvc_policy.py  game_state.py  pco_runner.py  programs.py  provider_utils.py  scratchpad.py  secret_utils.py  table_policy.py
cogent/: MEMORY.md  dashboard.md  mcp.yaml  state.json  test_in_progress.md  test_in_progress_011.md  test_in_progress_012_delta.md  todos.md
cogent/dashboard/: index.html
cogent/hooks/: on-sleep.md  on-wake.md
docs/: README.md  coach-workflow.md  cogames.md  coglet.md  framework.md  how-to-train-your-agent.html  improvements.md
docs/design/: proximal_coglet_optimizer.md
docs/plans/: 2026-03-28-coglet-implementation-design.md  2026-03-28-pco-implementation.md  2026-03-28-proglet-impl.md  2026-03-29-pco-llm-experiment-impl.md
examples/fanout.cog/: fanout.py
memory/: conversation.jsonl  memory.md
skills/coach/: SKILL.md
tests/: README.md  test_cli.py  test_coglet.py  test_cogweb_cli.py  test_game_state.py  test_handle.py  test_improvements.py  test_integration.py  test_lifelet.py  test_llm_executor.py  test_mixins.py  test_mullet.py  test_pco_constraint.py  test_pco_integration.py  test_pco_learner.py  test_pco_llm_experiment.py  test_pco_loss.py  test_pco_optimizer.py  test_pco_runner.py  test_pco_synthesis.py  test_proglet.py  test_programs.py  test_runtime.py  test_suppresslet.py  test_table_policy.py  test_ticklet.py
(+127 files in other folders)
