[project]
name = "cogamer"
version = "0.1.0"
description = "Self-improving agent for Softmax CoGames"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mettagrid",
    "pydantic",
    "fastapi",
    "uvicorn",
    "fastapi-mcp",
    "click>=8.0",
    "cogames",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coglet", "src/cogamer"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/cogamer"]

[tool.ty.environment]
extra-paths = ["src", "."]
